--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "owaisazam/starterpackage",
+    "name": "owaisazam/owaispackage",
     "description": "package description here",
     "license": "MIT",
     "authors": [
