--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "vendor-name/package-name",
+    "name": "iamowaisazam/starterpackage",
     "description": "package description here",
     "license": "MIT",
     "authors": [
         {
-            "name": "Author Name",
-            "email": "author@email.com"
+            "name": "Owais Azam",
+            "email": "iamowaisazam@gmail.com"
         }
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.4"
+        "php": "^8.0.19"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.17",
@@ -18,12 +18,12 @@
     },
     "autoload": {
         "psr-4": {
-            "TheTestCoder\\PhpPackageStructure\\": "src"
+            "OwaisAzam\\StarterPackage\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "TheTestCoder\\PhpPackageStructure\\Tests\\": "tests"
+            "OwaisAzam\\StarterPackage\\Tests\\": "tests"
         }
     },
     "scripts": {
